--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Hello!'
-description:	       'a personal website'
-author:              'Eliana Du'
+title:		           'eliana exists'
+description:	       'everyday explorations'
+# author:              'Eliana Du'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
